--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
- <!DOCTYPE html>
+  <!DOCTYPE html>
  <html>
     <head>
         <meta charset="UTF-8">
@@ -13,7 +13,13 @@
         </p>
         <hr>
         <a href="./public/movie-ranking.html"><h2>Movie Ranking Project</h2></a>
-        <img src=""
+        <img src="./assets/images/movie-rank.png" />
+        <hr>
+        <h2><a href="./public/birthday-invite.html">Birthday Invite</a></h2>
+        <img src="./assets/images/birthday-invite.png" />
+        <hr>
+        <a href="./public/about.html">About Me</a>
+        <a href="./public/contact.html">Contact Me</a>
     </body>
         
     </body>
